<resources>
    <string name="app_name">高校之恋</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--User Attributes-->
    <string name="school">school</string>
    <string name="sex">sex</string>
    <string name="college">college</string>

    <!--hint-->
    <string name="hint_base_info">基本信息</string>
    <string name="hint_email">请输入邮箱</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_forget_the_password">Forget the password?</string>
    <string name="hint_name">请输入用户名</string>
    <string name="hint_school_number">请输入学号</string>
    <string name="hint_college">请输入学院</string>
    <string name="hint_height">请输入身高</string>
    <string name="hint_interest">兴趣爱好</string>
    <string name="hint_motto">个人宣言</string>
    <string name="hint_brief">个人简介</string>
    <string name="hint_contact">联系方式</string>
    <string name="hint_private">私人信息</string>


    <!--button text-->
    <string name="button_sign_in">Sign In</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_register">Register</string>
    <string name="button_online">Online</string>
    <string name="button_edit">编辑资料</string>
    <string name="button_commit">提交修改</string>
    <string name="button_private_msg">私信系统</string>
    <string name="button_info">个人主页</string>
    <string name="button_ff">关注-粉丝</string>
    <string name="button_guests">已推嘉宾</string>
    <string name="button_match">匹配系统</string>
    <string name="button_exit">退出</string>
    <string name="button_follow">关注</string>
    <string name="button_unfollow">取消关注</string>
    <string name="button_send_msg">发送私信</string>


    <!--activity label-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="home">主页</string>
    <string name="personal_info">个人信息</string>
    <string name="online">在线</string>
    <string name="edit">编辑资料</string>
    <string name="follower_followee">关注粉丝</string>
    <string name="private_msg">私信</string>
</resources>
